# trunky-overlay

./: .gitignore  .npmrc  Cargo.toml  README.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml  rust.yml
apps/server/: Cargo.toml  package.json
apps/server/src/: main.rs
apps/ui/: package.json  svelte.config.js  vite.config.ts
apps/ui/src/: app.html
apps/ui/src/lib/player-list/store/: +state.ts  index.ts
apps/ui/src/lib/scoreboard/model/: index.ts
apps/ui/src/lib/shared/: broadcast-store.ts
apps/ui/src/routes/: +page.svelte  Button2.svelte
apps/ui/src/routes/control/: +page.svelte  Player.svelte  PlayerList.svelte
libs/embed_static/src/: lib.rs
libs/models/: Cargo.toml
libs/models/src/: lib.rs
libs/parser/: Cargo.toml
libs/socket/src/: lib.rs
src/: main.rs
static/: package.json  svelte.config.js
static/src/: app.css  app.html
static/src/lib/player-list/store/: +key.ts  +state.ts
static/src/lib/scoreboard/model/: scoreboard.model.ts
static/src/lib/scoreboard/store/: +key.ts  +state.ts
static/src/lib/shared/: broadcast-store.ts  index.ts  socket-singleton.ts
static/src/routes/: +page.svelte  Button.svelte  Button3.svelte
static/src/routes/scoreboard/: +page.svelte
