[package]
name = "trunky-overlay"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
axum-embed = "0.1.0"
clap = { version = "4.5.23", features = ["derive"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"

[dependencies.models]
path= "./libs/models"
