[package]
name = "trunky-overlay"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.42.0", default-features = false, features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
tower-http ={ version="0.6.2", default-features = false, features= ["cors"] }

[dependencies.embed_static]
path= "../../packages/embed_static"

[dependencies.socket]
path= "../../packages/socket"

[dependencies.parser]
path= "../../packages/parser"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
